<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="About"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@+id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivBack"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_back"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/bookPhoto"
                android:layout_width="160dp"
                android:layout_height="240dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvJudulBuku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/judul_buku"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/bookPhoto"
                app:layout_constraintTop_toTopOf="@+id/bookPhoto" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="Start with why"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="@id/tvJudulBuku"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvJudulBuku" />

            <TextView
                android:id="@+id/tvTahunTerbit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/tahun_terbit"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/bookPhoto"
                app:layout_constraintTop_toBottomOf="@id/tvName" />

            <TextView
                android:id="@+id/tvYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="2020"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="@id/tvTahunTerbit"
                app:layout_constraintTop_toBottomOf="@id/tvTahunTerbit" />

            <TextView
                android:id="@+id/tvPenulisBuku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/penulis_buku"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/bookPhoto"
                app:layout_constraintTop_toBottomOf="@id/tvYear" />

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="2020"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="@id/tvPenulisBuku"
                app:layout_constraintTop_toBottomOf="@id/tvPenulisBuku" />

            <TextView
                android:id="@+id/tvTentangBuku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tentang_buku"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/bookPhoto"
                app:layout_constraintTop_toBottomOf="@id/bookPhoto" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:justificationMode="inter_word"
                android:text="@string/contoh_deskripsi"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/tvTentangBuku"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTentangBuku" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="BELI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/action_share"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/action_share"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_share"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnBuy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBuy" />

</androidx.constraintlayout.widget.ConstraintLayout>


